manifests/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: prometheus
  name: prometheus
spec:
  ports:
    - name: prometheus
      port: 9090
      protocol: TCP
  selector:
    app: prometheus
